// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Matches the 'disabled' snapshot 1`] = `
<button
  className="bcgov-button bcgov-normal-blue btn"
  data-testid=""
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  Button label
</button>
`;

exports[`Button Component Matches the 'hasLoader' snapshot 1`] = `
<button
  className="bcgov-button bcgov-normal-blue btn"
  data-testid=""
  disabled={false}
  onClick={[MockFunction]}
  type="button"
>
  Button label
  <div
    className="bcgov-loader-show"
  >
    <div
      className="bcgov-btn-loader"
    />
  </div>
</button>
`;

exports[`Button Component Matches the 'primary' snapshot 1`] = `
<button
  className="bcgov-button bcgov-normal-blue btn"
  data-testid=""
  disabled={false}
  onClick={[MockFunction]}
  type="button"
>
  Button label
</button>
`;

exports[`Button Component Matches the 'secondary' snapshot 1`] = `
<button
  className="bcgov-button bcgov-normal-white btn"
  data-testid=""
  disabled={false}
  onClick={[MockFunction]}
  type="button"
>
  Button label
</button>
`;
